--- a/src/index.css
+++ b/src/index.css
@@ -34,10 +34,16 @@ body {
   }
 }
 
-@media screen and (min-width: 425px) and (max-width: 768px) {
+@media screen and (min-width: 426px) and (max-width: 768px) {
   .bg-image {
     background-image: url("./images/fruits-bg-tablet.png"),
       url("./images/vector-bg.png");
     background-size: 400px 400px, 400px 450px;
+  }
+}
+
+@media screen and (max-width: 426px) {
+  .bg-image {
+    background-image: none;
   }
 }
